--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -62,7 +62,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * O fluxo de dados operacional no CPTEC para a Assimilação de Dados
 * Controle de Qualidade das Observações
 
-  * &#128073; Aula 5 - [PDF]()
+  * &#128073; Aula 5 - [PPT](https://cfbastarz.github.io/MET563-3/Herdies_aula_1_Observ_2025.pptx)
 
 #### Leitura Complementar
 
