--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -165,11 +165,15 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Assimilação de Dados de Radar
 * Desenvolvimentos realizados no CPTEC
 
+  * &#128073; Aula 13 - [PDF]()
+
 ### 10. Impacto e Experimentos de Sistemas Observacionais
 
 * Visão geral sobre a metodologia e a ferramenta para o estudo de impacto das observações empregada no sistema de assimilação de dados do CPTEC
 * Impacto da Assimilação das Observações
 * Observing System Experiment (OSE) e Observing System Simulation Experiment (OSSE)
+
+  * &#128073; Aula 14 - [PDF](https://cfbastarz.github.io/MET563-3/aula_pgmet26112025.pdf)
 
 ### 11. Assimilação de Dados de Superfície
 
