Adicionando leitura complementar

--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -175,6 +175,15 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
   * &#128073; Aula 14 - [PDF](https://cfbastarz.github.io/MET563-3/aula_pgmet26112025.pdf)
 
+#### Leitura Complementar
+
+* Artigo - Todling (2013): [Comparing Two Approaches for Assessing Observation Impact](https://x.gd/c7pk7)
+* Artigo - Azevedo et al. (2017): [Observing System Experiments in a 3DVAR Data Assimilation System at CPTEC/INPE](https://x.gd/mJ7uC)
+* Artigo - Viana e de Mattos (2024): [Assessing the Impact of Observations on the Brazilian Global Atmospheric Model (BAM) Using Gridpoint Statistical Interpolation (GSI) System](https://x.gd/Fx527)
+* Artigo - Diniz e Todling (2019): [Assessing the impact of observations in a multi-year reanalysis](https://x.gd/KGtrz)
+* Artigo - Diniz et al. (2020): [A Brief Assessment of the Impact of Nearly 40 Years of Assimilated Observations Over the Amazon Basin](https://x.gd/JzmzG)
+* Dissertação - Diniz (2012): [Impacto das Observações nas Previsões de Curto Prazo](https://x.gd/lKlZC)
+
 ### 11. Assimilação de Dados de Superfície
 
 * Apresentação sobre a assimilação de dados de superfície, seus impactos e desafios
