--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -165,7 +165,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Assimilação de Dados de Radar
 * Desenvolvimentos realizados no CPTEC
 
-  * &#128073; Aula 13 - [PDF]()
+  * &#128073; Aula 13 - [PDF](https://cfbastarz.github.io/MET563-3/radar_data_assimilation2025.pdf)
 
 ### 10. Impacto e Experimentos de Sistemas Observacionais
 
