Adicionando aula Helena

--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -174,15 +174,18 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Observing System Experiment (OSE) e Observing System Simulation Experiment (OSSE)
 
   * &#128073; Aula 14 - [PDF](https://cfbastarz.github.io/MET563-3/aula_pgmet26112025.pdf)
+  * &#128073; Aula 15 - [PDF](https://cfbastarz.github.io/MET563-3/aula_OSE_01122025.pdf)
 
 #### Leitura Complementar
 
 * Artigo - Todling (2013): [Comparing Two Approaches for Assessing Observation Impact](https://x.gd/c7pk7)
 * Artigo - Azevedo et al. (2017): [Observing System Experiments in a 3DVAR Data Assimilation System at CPTEC/INPE](https://x.gd/mJ7uC)
-* Artigo - Viana e de Mattos (2024): [Assessing the Impact of Observations on the Brazilian Global Atmospheric Model (BAM) Using Gridpoint Statistical Interpolation (GSI) System](https://x.gd/Fx527)
 * Artigo - Diniz e Todling (2019): [Assessing the impact of observations in a multi-year reanalysis](https://x.gd/KGtrz)
 * Artigo - Diniz et al. (2020): [A Brief Assessment of the Impact of Nearly 40 Years of Assimilated Observations Over the Amazon Basin](https://x.gd/JzmzG)
+* Artigo - Ingleby et al. (2020): [The Impact of COVID-19 on Weather Forecasts: A Balanced View](https://x.gd/NG2hV)
+* Artigo - Viana e de Mattos (2024): [Assessing the Impact of Observations on the Brazilian Global Atmospheric Model (BAM) Using Gridpoint Statistical Interpolation (GSI) System](https://x.gd/Fx527)
 * Dissertação - Diniz (2012): [Impacto das Observações nas Previsões de Curto Prazo](https://x.gd/lKlZC)
+* Dissertação - Azevedo (2014): [Uso da Técnica de OSE para Avaliar o Impacto de Observações no Sistema de Assimilação de Dados Global Variacional Tridimensional do CPTEC/INPE](https://x.gd/haWSU)
 
 ### 11. Assimilação de Dados de Superfície
 
