Atualizando página met563-3.md

--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -150,7 +150,6 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Artigo - Bonavita et al. (2015): [EnKF and Hybrid Gain Ensemble Data Assimilation. Part II: EnKF and Hybrid Gain Results](https://x.gd/RxI8a)
 * Artigo - Azevedo et al. (2020): [Dynamically weighted hybrid gain data assimilation: perfect model testing](https://x.gd/Pw8qC)
 
-
 ### 8. Frameworks de Assimilação de Dados
 
 * Apresentação dos frameworks GSI e JEDI para a assimilação de dados operacional
@@ -161,7 +160,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 ### 9. Assimilação de Dados Regional
 
-* Apresentação sobre as particularidades de um sistema de assimilação de dados regional
+* ~~Apresentação sobre as particularidades de um sistema de assimilação de dados regional~~
 * Assimilação de Dados de Radar
 * Desenvolvimentos realizados no CPTEC
 
@@ -170,8 +169,12 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 ### 10. Impacto e Experimentos de Sistemas Observacionais
 
 * Visão geral sobre a metodologia e a ferramenta para o estudo de impacto das observações empregada no sistema de assimilação de dados do CPTEC
-* Impacto da Assimilação das Observações
-* Observing System Experiment (OSE) e Observing System Simulation Experiment (OSSE)
+* Impacto da Assimilação das Observações: ferramenta readDiag
+  * Impacto total
+  * Impacto fracionário
+  * Impacto benéfico fracionário
+* Radiâncias e impacto de observação
+* Observing System Experiment (OSE) 
 
   * &#128073; Aula 14 - [PDF](https://cfbastarz.github.io/MET563-3/aula_pgmet26112025.pdf)
   * &#128073; Aula 15 - [PDF](https://cfbastarz.github.io/MET563-3/aula_OSE_01122025.pdf)
