Atualizando cronograma e adicionando aula Sergio

--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -195,11 +195,19 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Apresentação sobre a assimilação de dados de superfície, seus impactos e desafios
 * Desenvolvimentos realizados no CPTEC
 
-### 12. Reanálises
+~~### 12. Reanálises~~
 
-* O que é reanálise
-* Reanálise como ferramenta de validação de modelos numéricos
-* Desenvolvimentos realizados no CPTEC com reanálise regional
+~~* O que é reanálise~~
+~~* Reanálise como ferramenta de validação de modelos numéricos~~
+~~* Desenvolvimentos realizados no CPTEC com reanálise regional~~
+
+### 13. Aula Extra - O formato BUFR e PREPBUFR
+
+* Conceitos gerais dos formatos BUFR e PREPBUFR e softwares disponíveis
+* Instalação e utilização de ferramentas BUFR
+* Programação e desenvolvimento
+
+  * &#128073; Aula 16 - [PDF](https://cfbastarz.github.io/MET563-3/2025_curso_BUFR-PREPBUFR_PGMET.pdf)
 
 ## Cronograma de Aulas
 
@@ -215,6 +223,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * H: Aula Helena
 * J: Aula João
 * L: Aula Liviany
+* S: Aula Sérgio
 
 ---
 
