--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -209,6 +209,13 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
   * &#128073; Aula 16 - [PDF](https://cfbastarz.github.io/MET563-3/2025_curso_BUFR-PREPBUFR_PGMET.pdf)
 
+#### Leitura Complementar
+
+* WMO: [Manual on Codes](https://x.gd/w2Jx7)
+* WMO: [ET-Data Meetings](https://x.gd/XGHbN)
+* WMO: [Code Registry](https://x.gd/TMkfG)
+* GitHub: [INPE-MBUFRTOOLS](https://x.gd/kyblj)
+
 ## Cronograma de Aulas
 
 ![Cronograma de Aulas](./img/cronograma-new.png)
