Adicionando aula João Gerd

--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -195,6 +195,9 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Apresentação sobre a assimilação de dados de superfície, seus impactos e desafios
 * Desenvolvimentos realizados no CPTEC
 
+  * &#128073; Aula 16 - [PDF](https://cfbastarz.github.io/MET563-3/aula_AD_Superficie.pdf)
+
+
 ~~### 12. Reanálises~~
 
 ~~* O que é reanálise~~
