Atualizando página met563-3.md

--- a/docs/met563-3.md
+++ b/docs/met563-3.md
@@ -19,8 +19,8 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 ### 2. Motivação
 
 * Equação de Análise Empírica: Por que a assimilação de dados fornece uma estimativa ótima? 
-    * &#128073; Aula 1 - [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaUni.html)
-    * &#128073; Aula 2 - [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaMulti.html)
+    * &#128073; Aula 2 pt.1 - [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaUni.html)
+    * &#128073; Aula 2 pt.2 - [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-AnlEmpiricaMulti.html)
 
 #### Atividades
 
@@ -30,10 +30,10 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 ### 3. Histórico da Assimilação de Dados
 
 * Revisão do histórico da assimilação de dados e das motivações para o seu desenvolvimento, passando pelos métodos de análise empíricos de Bergthórsson e Döös (1959) e Cressman (1955) - Método de Correções Sucessivas e Gandin (1963) - Interpolação Ótima
-    * &#128073; Aula 3 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico.html)
-    * &#128073; Aula 4 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Cressman.html)
+    * &#128073; Aula 3 pt.1 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico.html)
+    * &#128073; Aula 3 pt.2 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Cressman.html)
     * &#128073; Linha do Tempo da Assimilação de Dados no CPTEC - [PDF](https://cfbastarz.github.io/MET563-3/figs/linha_do_tempo_gad-2024-v3.pdf)
-    * &#128073; Aula 6 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Gandin.html)
+    * &#128073; Aula 3 pt.3 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Historico-Gandin.html)
 
 #### Leitura Complementar
 
@@ -62,7 +62,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * O fluxo de dados operacional no CPTEC para a Assimilação de Dados
 * Controle de Qualidade das Observações
 
-  * &#128073; Aula 5 - [PPT](https://cfbastarz.github.io/MET563-3/Herdies_aula_1_Observ_2025.pptx)
+  * &#128073; Aula 4 - [PPT](https://cfbastarz.github.io/MET563-3/Herdies_aula_1_Observ_2025.pptx)
 
 #### Leitura Complementar
 
@@ -74,7 +74,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 
 * Cálculo variacional
 * Revisão de Álgebra Linear (Operações com Matrizes)
-    * &#128073; Aula 7 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Variacional.html)
+    * &#128073; Aula 5 pt.1 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Variacional.html)
 * Introdução do método 3DVar
     * Histórico e desenvolvimento 
     * Características principais 
@@ -88,7 +88,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
     * ~~Controle de Qualidade~~
 * Visão geral sobre o método 4DVar
 * Atividades realizadas no CPTEC com o método 3DVar
-    * &#128073; Aula 8 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Variacional-pt2.html)
+    * &#128073; Aula 5 pt.2 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Variacional-pt2.html)
 
 #### Leitura Complementar
 
@@ -109,7 +109,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Inflation e Localization
 * Visão geral sobre os esquemas derivados
 * Atividades realizadas no CPTEC com o método LETKF
-    * &#128073; Aula 9 - [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-BayesRecursivo.html)
+    * &#128073; Aula 6 - [HTML](https://cfbastarz.github.io/MET563-3/Aula1_IntroAssimDados-BayesRecursivo.html)
 
 #### Leitura Complementar
 
@@ -140,8 +140,8 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
     * Experimentos com observação única
     * Experimentos com o sistema 3DVar híbrido
 
-* &#128073; Aula 10 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Hibrido.html)
-* &#128073; Aula 11 - [PDF](https://cfbastarz.github.io/MET563-3/aula_HM_10112025-1.pdf)
+* &#128073; Aula 7 pt.1 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-Hibrido.html)
+* &#128073; Aula 7 pt.2 - [PDF](https://cfbastarz.github.io/MET563-3/aula_HM_10112025-1.pdf)
 
 #### Leitura Complementar
 
@@ -156,7 +156,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Paradigmas de desenvolvimento do JEDI 
 * Atividades realizadas no CPTEC com o GSI e JEDI
 
-* &#128073; Aula 12 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-FrameworksAD.html)
+* &#128073; Aula 8 - [HTML](https://cfbastarz.github.io/MET563-3/Aula2_IntroAssimDados-FrameworksAD.html)
 
 ### 9. Assimilação de Dados Regional
 
@@ -164,7 +164,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Assimilação de Dados de Radar
 * Desenvolvimentos realizados no CPTEC
 
-  * &#128073; Aula 13 - [PDF](https://cfbastarz.github.io/MET563-3/radar_data_assimilation2025.pdf)
+  * &#128073; Aula 9 - [PDF](https://cfbastarz.github.io/MET563-3/radar_data_assimilation2025.pdf)
 
 ### 10. Impacto e Experimentos de Sistemas Observacionais
 
@@ -176,8 +176,8 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Radiâncias e impacto de observação
 * Observing System Experiment (OSE) 
 
-  * &#128073; Aula 14 - [PDF](https://cfbastarz.github.io/MET563-3/aula_pgmet26112025.pdf)
-  * &#128073; Aula 15 - [PDF](https://cfbastarz.github.io/MET563-3/aula_OSE_01122025.pdf)
+  * &#128073; Aula 10 pt.1 - [PDF](https://cfbastarz.github.io/MET563-3/aula_pgmet26112025.pdf)
+  * &#128073; Aula 10 pt.2 - [PDF](https://cfbastarz.github.io/MET563-3/aula_OSE_01122025.pdf)
 
 #### Leitura Complementar
 
@@ -195,14 +195,14 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Apresentação sobre a assimilação de dados de superfície, seus impactos e desafios
 * Desenvolvimentos realizados no CPTEC
 
-  * &#128073; Aula 16 - [PDF](https://cfbastarz.github.io/MET563-3/aula_AD_Superficie.pdf)
+  * &#128073; Aula 11 - [PDF](https://cfbastarz.github.io/MET563-3/aula_AD_Superficie.pdf)
 
 
-~~### 12. Reanálises~~
+### ~~12. Reanálises~~
 
-~~* O que é reanálise~~
-~~* Reanálise como ferramenta de validação de modelos numéricos~~
-~~* Desenvolvimentos realizados no CPTEC com reanálise regional~~
+* ~~O que é reanálise~~
+* ~~Reanálise como ferramenta de validação de modelos numéricos~~
+* ~~Desenvolvimentos realizados no CPTEC com reanálise regional~~
 
 ### 13. Aula Extra - O formato BUFR e PREPBUFR
 
@@ -210,7 +210,7 @@ Site do curso "Introdução à Assimilação de Dados (MET 563-3)" do Programa d
 * Instalação e utilização de ferramentas BUFR
 * Programação e desenvolvimento
 
-  * &#128073; Aula 16 - [PDF](https://cfbastarz.github.io/MET563-3/2025_curso_BUFR-PREPBUFR_PGMET.pdf)
+  * &#128073; Aula 13 - [PDF](https://cfbastarz.github.io/MET563-3/2025_curso_BUFR-PREPBUFR_PGMET.pdf)
 
 #### Leitura Complementar
 
